// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SettingsSubsection /> renders with plain text description 1`] = `
<div>
  <div
    class="mx_SettingsSubsection"
  >
    <div
      class="mx_SettingsSubsectionHeading"
    >
      <h3
        class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
      >
        Test
      </h3>
    </div>
    <div
      class="mx_SettingsSubsection_description"
    >
      <div
        class="mx_SettingsSubsection_text"
      >
        This describes the subsection
      </div>
    </div>
    <div
      class="mx_SettingsSubsection_content"
    >
      <div>
        test settings content
      </div>
    </div>
  </div>
</div>
`;

exports[`<SettingsSubsection /> renders with plain text heading 1`] = `
<div>
  <div
    class="mx_SettingsSubsection"
  >
    <div
      class="mx_SettingsSubsectionHeading"
    >
      <h3
        class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
      >
        Test
      </h3>
    </div>
    <div
      class="mx_SettingsSubsection_content"
    >
      <div>
        test settings content
      </div>
    </div>
  </div>
</div>
`;

exports[`<SettingsSubsection /> renders with react element description 1`] = `
<div>
  <div
    class="mx_SettingsSubsection"
  >
    <div
      class="mx_SettingsSubsectionHeading"
    >
      <h3
        class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
      >
        Test
      </h3>
    </div>
    <div
      class="mx_SettingsSubsection_description"
    >
      <div
        class="mx_SettingsSubsection_text"
      >
        <p>
          This describes the section 
          <a
            href="/#"
          >
            link
          </a>
        </p>
      </div>
    </div>
    <div
      class="mx_SettingsSubsection_content"
    >
      <div>
        test settings content
      </div>
    </div>
  </div>
</div>
`;

exports[`<SettingsSubsection /> renders with react element heading 1`] = `
<div>
  <div
    class="mx_SettingsSubsection"
  >
    <h3>
      This is the heading
    </h3>
    <div
      class="mx_SettingsSubsection_content"
    >
      <div>
        test settings content
      </div>
    </div>
  </div>
</div>
`;

exports[`<SettingsSubsection /> renders without description 1`] = `
<div>
  <div
    class="mx_SettingsSubsection"
  >
    <div
      class="mx_SettingsSubsectionHeading"
    >
      <h3
        class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
      >
        Test
      </h3>
    </div>
    <div
      class="mx_SettingsSubsection_content"
    >
      <div>
        test settings content
      </div>
    </div>
  </div>
</div>
`;
